fix sidebar overflow

--- a/src/scss/component/sidebar.scss
+++ b/src/scss/component/sidebar.scss
@@ -13,7 +13,9 @@
 
 .sidebar.left { left: 0px; transform: translate3d(-110%, 0px, 0px); }
 .sidebar.left {
-	.resize-h .resize-handle { left: 6px; right: auto; }
+	.resize-h {
+		.resize-handle { left: 6px; right: auto; }
+	}
 }
 .sidebar.right { right: 0px; transform: translate3d(110%, 0px, 0px); }
 .sidebar.right {
@@ -21,37 +23,38 @@
 	.resize-h {
 		.resize-handle { left: -6px; }
 	}
-
-	.sidebarHeader {
-		.icon.collapse { transform: rotateZ(180deg); }
-	}
 }
 
 .sidebar.fixed {
 	height: 100% !important; top: 0px !important; border-radius: 0px; box-shadow: 0px 0px rgba(0, 0, 0, 0); transform: translate3d(0px, 0px, 0px);
 }
 .sidebar.fixed {
-	> .head { height: 52px; cursor: default; }
-	> .head {
-		.icon { display: block; }
-		.icon:hover { background-color: $colorHoverMedium; }
+	.over {
+		> .head { height: 52px; cursor: default; }
+		> .head {
+			.icon { display: block; }
+			.icon:hover { background-color: $colorHoverMedium; }
+		}
+		> .body { height: calc(100% - 52px); }
 	}
-	> .body { height: calc(100% - 52px); }
 	.resize-v { display: none; }
 }
 .sidebar.anim { transition-property: left, top, width, box-shadow, transform; transition-duration: 0.2s; transition-timing-function: ease-in-out; }
 .sidebar.active { transform: translate3d(0px, 0px, 0px); }
 
 .sidebar {
-	> .head { display: flex; flex-direction: row; align-items: center; justify-content: flex-end; padding: 0px 16px 0px 0px; height: 12px; cursor: grab; }
-	> .head {
-		.icon { width: 28px; height: 28px; background-size: 20px; border-radius: 6px; cursor: default; display: none; }
-		.icon:hover { background-color: $colorHoverMedium; }
-		.icon.toggle { background-image: url('~img/icon/sidebar/toggle0.svg'); }
-		.icon.toggle:hover { background-image: url('~img/icon/sidebar/toggle1.svg'); }
-	}
+	.over { width: 100%; height: 100%; overflow: hidden; display: flex; flex-direction: column; }
+	.over {
+		> .head { display: flex; flex-direction: row; align-items: center; justify-content: flex-end; padding: 0px 16px 0px 0px; height: 12px; cursor: grab; }
+		> .head {
+			.icon { width: 28px; height: 28px; background-size: 20px; border-radius: 6px; cursor: default; display: none; }
+			.icon:hover { background-color: $colorHoverMedium; }
+			.icon.toggle { background-image: url('~img/icon/sidebar/toggle0.svg'); }
+			.icon.toggle:hover { background-image: url('~img/icon/sidebar/toggle1.svg'); }
+		}
 
-	> .body { height: calc(100% - 12px); padding: 0px 12px 12px 12px; position: relative; flex-grow: 1; overflow: hidden; overscroll-behavior: none; }
+		> .body { height: calc(100% - 12px); padding: 0px 12px 12px 12px; position: relative; flex-grow: 1; overflow: hidden; overscroll-behavior: none; }
+	}
 
 	.resize-h { width: 10px; height: 100%; position: absolute; top: 0px; right: -5px; cursor: col-resize; }
 	.resize-h {
@@ -76,15 +79,15 @@
 	.loaderWrapper { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
 }
 .sidebar:hover {
-	> .body { overflow-y: auto; }
+	.over > .body { overflow-y: auto; }
 }
 
 html.platformWindows {
 	.sidebar.fixed {
-		> .head { height: 38px; }
+		.over > .head { height: 38px; }
 	}
 
 	.sidebar:hover {
-		> .body { overflow-y: overlay; }
+		.over > .body { overflow-y: overlay; }
 	}
 }	
